hashmap/tests/invalid/only-arrow/only-arrow.rs
use hashmap::hashmap;
use std::collections::HashMap;

fn main() {
    // a single `=>` is invalid
    let map: HashMap<_, _> = hashmap!{=>};
}
