hashmap/tests/invalid/only-arrow/only-arrow.stderr
error: no rules expected the token `=>`
 --> $DIR/only-arrow.rs:6:39
  |
6 |     let map: HashMap<_, _> = hashmap!{=>};
  |                                       ^^ no rules expected this token in macro call
